# py-xmodel-rest

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  setup.cfg
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/api/xmodel/base/: fields.html  index.html
0.1.0/api/xmodel/common/: unwrap.html
0.1.0/api/xmodel/remote/: weak_cache_pool.html
0.1.0/api/xmodel_rest/: default_model_urls.html  model.html
0.1.0/api/xsentinels/: singleton.html
0.1.0/changelog/: index.html
0.1.0/search/: search_index.json
0.1.1/: 404.html  index.html
0.1.1/api/xinject/: dependency.html
0.1.1/api/xmodel/: json.html
0.1.1/api/xmodel/common/: types.html  utils.html
0.1.1/api/xmodel/remote/: errors.html  options.html
0.1.1/api/xmodel_rest/: auth.html
0.1.1/changelog/: index.html
0.1.1/search/: search_index.json
docs/: index.md
latest/api/xmodel/: converters.html  errors.html  index.html
latest/api/xmodel/base/: api.html  model.html  structure.html
latest/api/xmodel/common/: children.html  index.html  lazy.html
latest/api/xmodel/remote/: api.html  client.html  index.html  model.html  response_state.html  structure.html
latest/api/xmodel_rest/: api.html  client.html  errors.html  index.html  session.html  settings.html  structure.html
latest/changelog/: index.html
tests/: test_deletes.py  test_gets.py  test_models.py  test_patches.py  test_select_correct_url.py
xmodel_rest/: api.py  auth.py  client.py  default_model_urls.py  errors.py  model.py  session.py  settings.py  structure.py
xrest/: __init__.py  api.py  auth.py  client.py  default_model_urls.py  errors.py  model.py  structure.py
